# revenue_api_client

./: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py
opera_revenue_api/: client.py  fetch.py  upload.py
opera_revenue_api/test/: test_client.py
